--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <header>
-        <h2> <i>Приветствую вас на моем сайте!</i> </h2>
+        <h2> <i>Добрый вечер!</i> </h2>
     </header>
     <nav>
         <a href="#home">Главная</a>
