--- a/blog.html
+++ b/blog.html
@@ -10,17 +10,17 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ecf7ca;
+            background-color: #ffffff;
             color: #333;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #f3047c;
             color: white;
             padding: 10px 0;
             text-align: center;
         }
         nav {
-            background-color: #094d1d;
+            background-color: #131313;
             color: white;
             padding: 10px;
             text-align: center;
@@ -70,16 +70,16 @@
     </nav>
     <main>
         <div class="blog">
-            <h2>О личностном росте</h2>
-            <i>Ежедневное планирование</i>
-           <p> <i>Горизонт планирования</i></p>
-            <h2>Статьи</h2>
-            <p><i>Концепция 2017</i>
-            <a href="concepcia.pdf" target="_blank">открыть документ</a>
+            <h2>Новости</h2>
+            <i>Ежедневные</i>
+           <p> <i>Горизонты</i></p>
+            <h2>Наши победители</h2>
+            <p><i>Фамилии</i>
+            
             </div>
     </main>
     <footer>
-        <p>&copy; <small>2025 SafronovAI. Все права защищены.</small></p>
+        <p>&copy; <small>2025. Все права защищены.</small></p>
     </footer>
 </body>
 </html>
