--- a/contact.html
+++ b/contact.html
@@ -10,17 +10,17 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ecf7ca;
+            background-color: #ffffff;
             color: #333;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #f3047c;
             color: white;
             padding: 10px 0;
             text-align: center;
         }
         nav {
-            background-color: #094d1d;
+            background-color: #131313;
             color: white;
             padding: 10px;
             text-align: center;
@@ -77,13 +77,12 @@
     <main>
         <div class="contact-info">
             <h2>Для связи, обсуждений</h2>
-            <p><strong>Telegram</strong> <a href=https://t.me/AlexeySafronov> @AlexeySafronov</a></p>
-            <p><strong>Telegram</strong> <a href=https://t.me/sainform_bot>bot</a></p>
-            <p><strong>Email:</strong> s991771@gmail.com</p>
+            <p><strong>Telegram</strong> <a href=https://t.me/arusina> @Alinarusina</a></p>
+            <p><strong>Email:</strong> alinarusina92@gmail.com</p>
         </div>
     </main>
     <footer>
-        <p>&copy; <small>2025 SafronovAI. Все права защищены.</small></p>
+        <p>&copy; <small>2025. Все права защищены.</small></p>
     </footer>
 </body>
 </html>
