--- a/events.html
+++ b/events.html
@@ -10,17 +10,17 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ecf7ca;
+            background-color: #ffffff;
             color: #333;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #f3047c;
             color: white;
             padding: 10px 0;
             text-align: center;
         }
         nav {
-            background-color: #094d1d;
+            background-color: #131313;
             color: white;
             padding: 10px;
             text-align: center;
@@ -61,11 +61,8 @@
         <a href="contact.html">Контакты</a>
     </nav>
     <main>
-        <h2>Актуально</h2>
-        <i>Форум профессионалов педагогического мастерства</i>
-        <h2>Прошедшие события</h2>
-        <i>Конференция "Психология спорта"</i> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css">
+        <h2>График соревнований</h2>
+           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css">
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/locales/ru.min.js"></script>
 <div id="calendar"></div>
@@ -77,11 +74,15 @@
             locale: 'ru',
             events: [
                 {
-                    title: 'Конференция',
+                    title: 'Первенство Раменского г.о.',
                     start: '2025-02-05'
                 },
                 {
-                    title: 'Мастер-класс',
+                    title: 'Первенство Раменского г.о.',
+                    start: '2025-02-06'
+                },
+                {
+                    title: '2',
                     start: '2025-02-20'
                 }
             ]
@@ -92,7 +93,7 @@
         </ul>
     </main>
     <footer>
-        <p>&copy; <small>2025 SafronovAI. Все права защищены.</small></p>
+        <p>&copy; <small>2025. Все права защищены.</small></p>
     </footer>
 </body>
 </html>
