--- a/files.html
+++ b/files.html
@@ -10,17 +10,17 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ecf7ca;
+            background-color: #ffffff;
             color: #333;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #f3047c;
             color: white;
             padding: 10px 0;
             text-align: center;
         }
         nav {
-            background-color: #094d1d;
+            background-color: #131313;
             color: white;
             padding: 10px;
             text-align: center;
@@ -71,13 +71,13 @@
     <main>
         <div class="files">
             <h2>Telegram</h2>
-            <p><i>Для ознакомления</i> <a href=https://t.me/+UtMtozr3XIkyMjRi> просмотр</a></p>
+            <p><i>Для ознакомления</i></p>
             <h2>Server</h2>
             <a href="FGOS-OOO-na-17.02.2023.pdf" download>FGOS-OOO-na-17.02.2023</a>
         </div>
     </main>
     <footer>
-        <p>&copy; <small>2025 SafronovAI. Все права защищены.</small></p>
+        <p>&copy; <small>2025. Все права защищены.</small></p>
     </footer>
 </body>
 </html>
