--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ecf7ca;
+            background-color: #ffffff;
             color: #333;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #f3047c;
             color: white;
             padding: 10px 0;
             text-align: center;
         }
         nav {
-            background-color: #094d1d;
+            background-color: #131313;
             color: white;
             padding: 10px;
             text-align: center;
@@ -62,15 +62,13 @@
     </nav>
     <main>
         <h2>Обо мне</h2> 
-        <img src="photo.png" alt="Сафронов АИ" width="170" height="170">
-    </p> <i>Сафронов Алексей Игоревич - кандидат педагогических наук, доцент кафедры ТМСиФВ ГАОУ ВО МГУСиТ</i> <p>
-    <i>Профессиональная сфера - физическая культура и спорт, педагогика, психология </i>
-        <h2>Образование</h2>
-        <i>Коломенский государственный педагогический институт</i> 
-</p><i>Российский государственный социально-гуманитарный университет</i> <p>
+        <img src="1.jpg" alt="Фото бадминтон" width="250" height="170">
+   
+           <h2>ДЮСШ Спартак-Орехово</h2>
+       </p><i>бадминтонисты</i> <p>
     </main>
     <footer>
-        <p>&copy; <small>2025 SafronovAI. Все права защищены.</small></p>
+        <p>&copy; <small>2025. Все права защищены.</small></p>
     </footer>
 </body>
 </html>
